# memecopy-lab

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: agent-prompts.md  anti-rug-spec.md  architecture.md  backtesting-spec.md  data-feasibility-findings.md  live-trading-ban.md  paper-trading-spec.md  pr-process.md  safety-constitution.md  task-distribution.md  trader-selection-spec.md
src/memecopy_lab/: __init__.py
src/memecopy_lab/adapters/: __init__.py
src/memecopy_lab/api/: __init__.py
src/memecopy_lab/core/: __init__.py  constants.py  enums.py  models.py  validation.py
src/memecopy_lab/spikes/: __init__.py  data_feasibility.py
src/memecopy_lab/worker/: __init__.py
tests/: test_data_feasibility.py  test_domain_models.py  test_package.py
