[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memecopy-lab"
version = "0.1.0"
description = "Paper-trading-only Solana memecoin copy-trading research system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "MemeCopy Lab" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy==1.14.1",
    "pytest==8.3.4",
    "ruff==0.8.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
files = ["src", "tests"]
mypy_path = "src"
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
